# cbudget

./: .gitignore  LICENSE  pyproject.toml  setup.py
cbudget/: cli.py  enforce_budget.py  fetch_forecast.py  predict_emission.py  temporal_window.py
cbudget/configs/: carbon-policy.rego  infra-budget.yml
